# humankind

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_DIAGRAM.md  CoreGameplay.md  DECK_ARCHITECTURE.md  DESIGN_REFERENCE.md  EARLY_ACCESS_PLAN.md  EventSymbols.csv  GAME_DESIGN_REFERENCE.md  How_to_add_symbols.md  README.md  SYSTEM_OVERVIEW.md  Symbols.csv  Symbols_v4.csv  TECHNICAL_AUDIT_REPORT_2026-06-10.md  build_guide.md  diff.txt  game_system_summary.txt  gemini.md  ideas.txt  tasks.txt
.claude/: settings.local.json
humankind/: icon.svg.import  project.godot
humankind-in-a-nutshell/: IMPROVEMENTS.md  icon.svg.import  project.godot
humankind-in-a-nutshell/assets/: AtlantisText-Bold.ttf.import  default_theme.tres
humankind-web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite-dev-log.txt  vite.config.ts
humankind-web/scripts/: packageSteamMacos.cjs  updateRelicsX10.cjs
humankind-web/src/: App.css  App.tsx  CrtRoot.tsx  browserBehaviorGuards.ts  crt.css  index.css  main.tsx  settingsKeyBindings.css  uiAssetUrls.ts
humankind-web/src-tauri/: Cargo.toml  tauri.conf.json
humankind-web/src-tauri/capabilities/: default.json
humankind-web/src-tauri/icons/: icon.icns
humankind-web/src-tauri/src/: main.rs
humankind/scripts/: EffectProcessor.gd  EffectProcessor.gd.uid  EffectTypes.gd  EffectTypes.gd.uid  SymbolData.gd  SymbolData.gd.uid  SymbolEffectsProcessor.gd  SymbolEffectsProcessor.gd.uid  SymbolSelectionManager.gd  SymbolSelectionManager.gd.uid  SymbolSelectionPool.gd  SymbolSelectionPool.gd.uid  symbol.gd  (+7 more)
(+340 files in other folders)
